# bachelor-thesis

./: .gitignore  .gitmodules  README.md
.docker/: Dockerfile.3  commands.md
drug-rag/: README.md
mdcath-to-3di/: Dockerfile  README.md  docker.tar  environment-mac.yml  environment.yml  pyproject.toml
mdcath-to-3di/.docker/: Dockerfile  Dockerfile.1  commands.md  container_setup.sh  env_docker.yml  requirements.txt  setup.sh
mdcath-to-3di/configs/: data.yml  model.yaml  project.yml  train.yml
mdcath-to-3di/envs/: Dockerfile  env.list  env.yml  env_base.yml  env_mac.yml  repo.py
mdcath-to-3di/notebooks/: _header.py  _header_data.py  _header_model.py  attention_mask_pruning.ipynb  dataset_generation.ipynb  download_hf.ipynb  kl_div_tests.ipynb  mdcath_singe_file.ipynb  model_training.ipynb  processing_test.ipynb  pssm_generation.ipynb  pssm_prediction_analysis.ipynb  sanity_check.ipynb  testing.ipynb  token_analysis.ipynb  tokenize_bio2token.ipynb  train_plms_lib.ipynb  train_simple.ipynb  traj_analysis.ipynb
mdcath-to-3di/notebooks/data/: _header_model.py  model_training.ipynb  sanity_check.ipynb  token_analysis.ipynb  tresting_pssm_creation.ipynb
mdcath-to-3di/notebooks/deprecated/: code_graveyard.py  deprecated_code_dump.py  process_mdcath.py
mdcath-to-3di/notebooks/deprecated/notebooks/: debug.ipynb
mdcath-to-3di/notebooks/deprecated/scripts/: mdcath_download.py
mdcath-to-3di/notebooks/examples/: high_ground.txt  visualize_save_traj_mdanalysis.ipynb  visualize_traj_mdanalysis.ipynb
mdcath-to-3di/rust/: Cargo.toml
mdcath-to-3di/rust/src/: lib.rs
mdcath-to-3di/scripts/: pssm_script.py  tokenize_script.py
mdcath-to-3di/src/: __init__.py  _shared.py
mdcath-to-3di/src/data/: mdcath_processing.py  pipeline.py  plots.py  process_mdcath.py  processing_mdcath.py  tokenize_bio2token.py  tokenize_foldseek.py  tokenizer_bio2token.py  utils.py
mdcath-to-3di/src/data/load/: __init__.py  mdcath.py  trajectory_dataset.py
mdcath-to-3di/src/data/plot/: plot_mdcath.py
mdcath-to-3di/src/data/pssm/: foldseek.py
mdcath-to-3di/src/data/tokenize/: __init__.py  base_tokenizer.py  bio2token.py  foldseek.py  foldtoken4.py  tokenize.py  tokenize_base.py  tokenize_bio2token.py  tokenize_foldseek.py  tokenize_foldtoken4.py  trajectory_tokenizer.py
mdcath-to-3di/src/model/: model.py  modeling_md_pssm.py  modules.py  modules_md_pssm.py
mdcath-to-3di/src/model/utils/: __init__.py  data_collator.py  modules.py  translations.py
mdcath-to-3di/src/plots/: train_plots.py
mdcath-to-3di/src/scripts/: download.py  mdcath_tokenize.py  tokenize.py
mdcath-to-3di/src/utils/: bio.py  logging.py  sanity_checks.py
mdcath_to_3di/: .flake8  README.md  dataset_generation.ipynb  environment-mac.yml  environment.yml  pyproject.toml
mdcath_to_3di/notebooks/: dataset_generation.ipynb  md_cath_exploration.ipynb  mdcath_exploration_h5.ipynb  mdcath_exploration_mdanalysis.ipynb  mdcath_exploration_mdtraj.ipynb  pyproj.txt
mdcath_to_3di/notebooks/deprecated/: deprecated_code_dump.py
mdcath_to_3di/src/: deprecated_code_dump.py
mdcath_to_3di/src/data/: mdcath_processing.py
mdcath_to_3di/src/dataset/: foldseek.py  utils.py
mdcath_to_3di/src/datasets/: foldseek.py
mdcath_to_3di/src/model/: model.py
mdcath_to_3di/src/utils/: logging.py
plms-lib/: README.md  pyproject.toml
plms-lib/notebooks/: example.ipynb  example_finetuning.ipynb  example_loading_and_embeddings.ipynb  testing.ipynb
plms-lib/src/plms/: __init__.py  modeling_outputs.py
plms-lib/src/plms/configurations/: __init__.py  configuration_base_plm.py  configuration_plm.py
plms-lib/src/plms/models/: __init__.py  base_plm.py  base_tokenizer.py  plm.py  plm_token_classification.py  predictor_plm.py  utils.py
plms-lib/src/plms/models/CLIP/: __init__.py
plms-lib/src/plms/models/T5/: modeling_prostT5.py  modeling_protT5.py  prostT5.py  protT5.py  tokenization_prostT5.py  tokenization_protT5.py
plms-lib/src/plms/models/auto/: __init__.py  auto_model.py  auto_tokenizer.py
plms-lib/src/plms/trainer/: trainer_base.py  trainer_eval_random_subset.py  trainer_train_identifier_subset.py
plms-lib/src/plms/utils/: __init__.py  constants.py  modeling_utils.py  utils.py
plms-lib/tests/: __init__.py  conftest.py  test_plm.py
prot-jepa/: pyproject.toml
prot-md-pssm-benchmark/create-pssm-test/: .gitignore  generate_pssm.awk  generate_pssm.sh
prot-md-pssm-benchmark/mdcath-scope-benchmark/: .gitignore  cath_dataset_lookup_creation.ipynb  plot_benchmarks.ipynb  runFoldseekMDPSSM.sh  runFoldseekPDBFinn.sh  runFoldseekProstFinn.sh  runMMseqs3DiFinn.sh  runMMseqsFinn.sh  runMMseqsMDPSSM_minimal.sh
prot-md-pssm-benchmark/scope-benchmark-minimal/: .gitignore  argmax_3Di.ipynb  (+5 more)
prot-md-pssm-legacy/: .gitignore  README.md
prot-pssm/: .gitignore  README.md  pyproject.toml
prot-pssm/benchmark/: build_profiledb_new.py  plot_benchmarks.ipynb  plot_benchmarks.py  pssm_parser.py  runFoldseekMDPSSM.sh
prot-pssm/notebooks/: dataset.ipynb  dataset_splitting.ipynb  heatmap_comparison.ipynb  plms-lib-rebuild.ipynb  train.ipynb
prot-pssm/scripts/: benchmark.py  train.py
prot-pssm/src/plm_pssms/: __init__.py
prot-pssm/src/plm_pssms/model/: __init__.py  configuarion_plm_pssms.py  data_collator_plm_pssms.py  modeling_plm_pssms.py
prot-pssm/src/plm_pssms/trainer/: __init__.py  subset_trainer.py
protein-folding/: pyproject.toml
rag-folding/: docker-compose.yml
slides-figures-notes/: Figures.afdesign  Figures.afdesign~lock~  Slides.key
tokenization-benchmark/: .gitignore  benchmark.ipynb  benchmark.py  pyproject.toml
tokenization-benchmark/benchmarks/: benchmark.py
tokenization-benchmark/tokenizers/bio2token_tokenizer/: README.md  benchmark_bio2token.ipynb
tokenization-benchmark/tokenizers/bio2token_tokenizer_legacy/: benchmark_bio2token.ipynb  bio2token_extension.py  extract_tokens.ipynb  pyproject.toml  remove_pdb_backbones.py
tokenization-benchmark/tokenizers/foldtoken_tokenizer/: FT4_detokenize.sh  FT4_reconstruct.sh  FT4_tokenize.sh  benchmark_FoldToken.ipynb  pyproject.toml  readme.md
(+115 files in other folders)
