[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name ="src"
version = "0.0.1"
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "src.rust_modules"
python-source = "./"
rust-source = "./rust"

[tool.ruff]
extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
ignore = ["E501", "F405"]
show-fixes = true
# target-version = "py310"

# change the default line length number or characters.
line-length = 128

[tool.pylint]
max-line-length = 128
disable = []