[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name ="plms"
version = "2025.1.0"
description = "A library for simple use and training of protein language models."
readme = "README.md"
authors = [
  {name = "Finn Lueth", email = "finn.lueth@tum.de"},
]
maintainers = [
  {name = "Finn Lueth", email = "finn.lueth@tum.de"}
]
license = {file = "LICENSE"}
keywords = ["protein language models", "protein folding", "protein design"]

dependencies = [
    "numpy",
    "torch",
    "transformers",
    "datasets",
    "pydantic",
]

[project.urls]
homepage = "https://github.com/finnlueth/plms-lib"
repository = "https://github.com/finnlueth/plms-lib"
documentation = "https://finnlueth.github.io/plms-lib"

[tool.ruff]
extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
ignore = ["E501", "F405"]
show-fixes = true
line-length = 128

[tool.pylint]
max-line-length = 128
disable = []