[project]
name = "foldtoken-tokenizer-benchmark"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mamba-ssm>=2.2.4",
    "numpy>=2.2.4",
    "nvitop>=1.4.2",
    "omegaconf>=2.3.0",
    "pytorch-lightning>=2.5.1",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "wandb>=0.19.8",
    "torch-scatter==2.1.1",
    "setuptools>=78.1.0",
    "torch-geometric>=2.6.1",
    "joblib>=1.4.2",
    "torch-cluster>=1.6.3",
]

[tool.uv]
no-build-isolation-package = ['torch-scatter', 'torch-cluster']

